# auth/openapi.yaml
@@ -6,30 +6,6 @@ info:
     title: Auth API
     version: 0.0.1
 paths:
-    /auth/identity:
-        post:
-            tags:
-                - Auth
-            operationId: Auth_Identity
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/IdentityRequest'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/IdentityReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
     /auth/refresh:
         post:
             tags:
@@ -112,17 +88,6 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        IdentityReply:
-            type: object
-            properties:
-                id:
-                    type: integer
-                    format: uint64
-        IdentityRequest:
-            type: object
-            properties:
-                accessToken:
-                    type: string
         RefreshTokenReply:
             type: object
             properties:
